fix misaligned email pt.3

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1647,7 +1647,7 @@
 		display: -moz-flex;
 		display: -webkit-flex;
 		display: -ms-flex;
-		display: flex;
+		display: inline-flex;
 		position: relative;
 	}
 
